updated yaml and configure files.
