# openAPI.yaml
@@ -1,46 +1,47 @@
 openapi: 3.0.0
 info:
-  title: Planetary API
-  description: API to get planetary positions, power scores, and other astrological information based on date, time, latitude, and longitude.
+  title: AstrologicAPI
+  description: API to get planetary positions, power scores, south node configurations, and harmony scores based on a given date, time, latitude, and longitude.
   version: 1.0.0
 servers:
-  - url:  https://087a-209-222-126-192.ngrok-free.app
-    description: Local server
+  - url:  https://9dfe-209-222-126-192.ngrok-free.app
+    description: Development server
 paths:
-  /planets/natal-planets:
+  /planets:
     get:
-      operationId: getNatalPlanets
       summary: Get planetary positions
-      description: Returns the positions of planets based on the provided date, time, latitude, and longitude.
+      operationId: getPlanets
+      tags:
+        - planets
       parameters:
         - name: date
           in: query
+          description: Date in YYYY-MM-DD format.
           required: true
           schema:
             type: string
             format: date
-          description: Date in ISO 8601 format (YYYY-MM-DD).
         - name: time
           in: query
+          description: Time in HH:MM:SS format.
           required: true
           schema:
             type: string
             format: time
-          description: Time in ISO 8601 format (HH:MM:SS).
         - name: lat
           in: query
+          description: Latitude.
           required: true
           schema:
             type: number
-            format: float
-          description: Latitude of the location.
+            format: double
         - name: lon
           in: query
+          description: Longitude.
           required: true
           schema:
             type: number
-            format: float
-          description: Longitude of the location.
+            format: double
       responses:
         '200':
           description: A list of planetary positions
@@ -53,47 +54,50 @@ paths:
                     type: array
                     items:
                       type: string
+                    description: List of planetary positions
         '400':
-          description: Bad Request, e.g., missing or invalid parameters
+          description: Bad request
         '500':
-          description: Internal Server Error
+          description: Internal server error
+
   /planets/power-scores:
     get:
+      summary: Get power scores for planets
       operationId: getPowerScores
-      summary: Get planetary power scores
-      description: Returns the total power scores of planets based on the provided date, time, latitude, and longitude.
+      tags:
+        - planets
       parameters:
         - name: date
           in: query
+          description: Date in YYYY-MM-DD format.
           required: true
           schema:
             type: string
             format: date
-          description: Date in ISO 8601 format (YYYY-MM-DD).
         - name: time
           in: query
+          description: Time in HH:MM:SS format.
           required: true
           schema:
             type: string
             format: time
-          description: Time in ISO 8601 format (HH:MM:SS).
         - name: lat
           in: query
+          description: Latitude.
           required: true
           schema:
             type: number
-            format: float
-          description: Latitude of the location.
+            format: double
         - name: lon
           in: query
+          description: Longitude.
           required: true
           schema:
             type: number
-            format: float
-          description: Longitude of the location.
+            format: double
       responses:
         '200':
-          description: A list of planetary power scores
+          description: A list of power scores
           content:
             application/json:
               schema:
@@ -103,47 +107,50 @@ paths:
                     type: array
                     items:
                       type: string
+                    description: List of power scores
         '400':
-          description: Bad Request, e.g., missing or invalid parameters
+          description: Bad request
         '500':
-          description: Internal Server Error
+          description: Internal server error
+
   /planets/southNode:
     get:
+      summary: Get south node configuration
       operationId: getSouthNode
-      summary: Get South Node Configuration
-      description: Returns the South Node configuration based on the provided date, time, latitude, and longitude.
+      tags:
+        - planets
       parameters:
         - name: date
           in: query
+          description: Date in YYYY-MM-DD format.
           required: true
           schema:
             type: string
             format: date
-          description: Date in ISO 8601 format (YYYY-MM-DD).
         - name: time
           in: query
+          description: Time in HH:MM:SS format.
           required: true
           schema:
             type: string
             format: time
-          description: Time in ISO 8601 format (HH:MM:SS).
         - name: lat
           in: query
+          description: Latitude.
           required: true
           schema:
             type: number
-            format: float
-          description: Latitude of the location.
+            format: double
         - name: lon
           in: query
+          description: Longitude.
           required: true
           schema:
             type: number
-            format: float
-          description: Longitude of the location.
+            format: double
       responses:
         '200':
-          description: South Node Configuration
+          description: A south node configuration
           content:
             application/json:
               schema:
@@ -151,94 +158,47 @@ paths:
                 properties:
                   config:
                     type: string
+                    description: South node configuration details
         '400':
-          description: Bad Request, e.g., missing or invalid parameters
+          description: Bad request
         '500':
-          description: Internal Server Error
-  /planets/sign-scores:
-    get:
-      operationId: getSignScores
-      summary: Get Sign Scores
-      description: Returns the sign scores based on the provided date, time, latitude, and longitude.
-      parameters:
-        - name: date
-          in: query
-          required: true
-          schema:
-            type: string
-            format: date
-          description: Date in ISO 8601 format (YYYY-MM-DD).
-        - name: time
-          in: query
-          required: true
-          schema:
-            type: string
-            format: time
-          description: Time in ISO 8601 format (HH:MM:SS).
-        - name: lat
-          in: query
-          required: true
-          schema:
-            type: number
-            format: float
-          description: Latitude of the location.
-        - name: lon
-          in: query
-          required: true
-          schema:
-            type: number
-            format: float
-          description: Longitude of the location.
-      responses:
-        '200':
-          description: A list of sign scores
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  scores:
-                    type: array
-                    items:
-                      type: string
-        '400':
-          description: Bad Request, e.g., missing or invalid parameters
-        '500':
-          description: Internal Server Error
+          description: Internal server error
+
   /planets/house-scores:
     get:
+      summary: Get house scores for planets
       operationId: getHouseScores
-      summary: Get House Scores
-      description: Returns the house scores based on the provided date, time, latitude, and longitude.
+      tags:
+        - planets
       parameters:
         - name: date
           in: query
+          description: Date in YYYY-MM-DD format.
           required: true
           schema:
             type: string
             format: date
-          description: Date in ISO 8601 format (YYYY-MM-DD).
         - name: time
           in: query
+          description: Time in HH:MM:SS format.
           required: true
           schema:
             type: string
             format: time
-          description: Time in ISO 8601 format (HH:MM:SS).
         - name: lat
           in: query
+          description: Latitude.
           required: true
           schema:
             type: number
-            format: float
-          description: Latitude of the location.
+            format: double
         - name: lon
           in: query
+          description: Longitude.
           required: true
           schema:
             type: number
-            format: float
-          description: Longitude of the location.
+            format: double
       responses:
         '200':
           description: A list of house scores
@@ -251,47 +211,50 @@ paths:
                     type: array
                     items:
                       type: string
+                    description: List of house scores
         '400':
-          description: Bad Request, e.g., missing or invalid parameters
+          description: Bad request
         '500':
-          description: Internal Server Error
-  /planets/house-harmony:
+          description: Internal server error
+
+  /planets/sign-scores:
     get:
-      operationId: getHouseHarmony
-      summary: Get House Harmony Scores
-      description: Returns the house harmony scores based on the provided date, time, latitude, and longitude.
+      summary: Get sign scores for planets
+      operationId: getSignScores
+      tags:
+        - planets
       parameters:
         - name: date
           in: query
+          description: Date in YYYY-MM-DD format.
           required: true
           schema:
             type: string
             format: date
-          description: Date in ISO 8601 format (YYYY-MM-DD).
         - name: time
           in: query
+          description: Time in HH:MM:SS format.
           required: true
           schema:
             type: string
             format: time
-          description: Time in ISO 8601 format (HH:MM:SS).
         - name: lat
           in: query
+          description: Latitude.
           required: true
           schema:
             type: number
-            format: float
-          description: Latitude of the location.
+            format: double
         - name: lon
           in: query
+          description: Longitude.
           required: true
           schema:
             type: number
-            format: float
-          description: Longitude of the location.
+            format: double
       responses:
         '200':
-          description: A list of house harmony scores
+          description: A list of sign scores
           content:
             application/json:
               schema:
@@ -301,94 +264,47 @@ paths:
                     type: array
                     items:
                       type: string
+                    description: List of sign scores
         '400':
-          description: Bad Request, e.g., missing or invalid parameters
+          description: Bad request
         '500':
-          description: Internal Server Error
-  /planets/sign-harmony:
-    get:
-      operationId: getSignHarmony
-      summary: Get Sign Harmony Scores
-      description: Returns the sign harmony scores based on the provided date, time, latitude, and longitude.
-      parameters:
-        - name: date
-          in: query
-          required: true
-          schema:
-            type: string
-            format: date
-          description: Date in ISO 8601 format (YYYY-MM-DD).
-        - name: time
-          in: query
-          required: true
-          schema:
-            type: string
-            format: time
-          description: Time in ISO 8601 format (HH:MM:SS).
-        - name: lat
-          in: query
-          required: true
-          schema:
-            type: number
-            format: float
-          description: Latitude of the location.
-        - name: lon
-          in: query
-          required: true
-          schema:
-            type: number
-            format: float
-          description: Longitude of the location.
-      responses:
-        '200':
-          description: A list of sign harmony scores
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  scores:
-                    type: array
-                    items:
-                      type: string
-        '400':
-          description: Bad Request, e.g., missing or invalid parameters
-        '500':
-          description: Internal Server Error
+          description: Internal server error
+
   /planets/planet-harmony:
     get:
-      operationId: getPlanetHarmony
-      summary: Get Planet Harmony Scores
-      description: Returns the planet harmony scores based on the provided date, time, latitude, and longitude.
+      summary: Get planet harmony scores
+      operationId: getPlanetHarmonyScores
+      tags:
+        - planets
       parameters:
         - name: date
           in: query
+          description: Date in YYYY-MM-DD format.
           required: true
           schema:
             type: string
             format: date
-          description: Date in ISO 8601 format (YYYY-MM-DD).
         - name: time
           in: query
+          description: Time in HH:MM:SS format.
           required: true
           schema:
             type: string
             format: time
-          description: Time in ISO 8601 format (HH:MM:SS).
         - name: lat
           in: query
+          description: Latitude.
           required: true
           schema:
             type: number
-            format: float
-          description: Latitude of the location.
+            format: double
         - name: lon
           in: query
+          description: Longitude.
           required: true
           schema:
             type: number
-            format: float
-          description: Longitude of the location.
+            format: double
       responses:
         '200':
           description: A list of planet harmony scores
@@ -401,60 +317,12 @@ paths:
                     type: array
                     items:
                       type: string
+                    description: List of planet harmony scores
         '400':
-          description: Bad Request, e.g., missing or invalid parameters
+          description: Bad request
         '500':
-          description: Internal Server Error
-  /planets/natal-aspects:
-    get:
-      operationId: getNatalAspects
-      summary: Get Natal Aspects
-      description: Returns the natal aspects based on the provided date, time, latitude, and longitude.
-      parameters:
-        - name: date
-          in: query
-          required: true
-          schema:
-            type: string
-            format: date
-          description: Date in ISO 8601 format (YYYY-MM-DD).
-        - name: time
-          in: query
-          required: true
-          schema:
-            type: string
-            format: time
-          description: Time in ISO 8601 format (HH:MM:SS).
-        - name: lat
-          in: query
-          required: true
-          schema:
-            type: number
-            format: float
-          description: Latitude of the location.
-        - name: lon
-          in: query
-          required: true
-          schema:
-            type: number
-            format: float
-          description: Longitude of the location.
-      responses:
-        '200':
-          description: A list of natal aspects
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  scores:
-                    type: array
-                    items:
-                      type: string
-        '400':
-          description: Bad Request, e.g., missing or invalid parameters
-        '500':
-          description: Internal Server Error
+          description: Internal server error
+
 components:
   schemas:
     PlanetaryPositionsResponse:
